force-app/main/default/objects/Task/fields/Investor_Sentiment_After__c.field-meta.xml
<CustomField>
    <fullName>Investor_Sentiment_After__c</fullName>
    <label>Investor Sentiment After</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Positive</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>