force-app/main/default/objects/Task/fields/Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Duration__c</fullName>
    <label>Meeting Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>