force-app/main/default/objects/Task/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>LongTextArea</type>
</CustomField>